--- a/npm/ecopages/package.json
+++ b/npm/ecopages/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "ecopages",
 	"version": "0.1.92",
-	"description": "Universal entry point for Ecopages",
+	"description": "CLI utilities for Ecopages",
 	"type": "module",
 	"license": "MIT",
 	"author": "Ecopages Team",
@@ -25,286 +25,20 @@
 		"lit",
 		"mdx"
 	],
-	"main": "./index.js",
-	"types": "./index.d.ts",
 	"bin": {
 		"ecopages": "bin/cli.js"
 	},
-	"exports": {
-		".": {
-			"import": "./index.js",
-			"types": "./index.d.ts"
-		},
-		"./react-router": {
-			"import": "./react-router/index.js",
-			"types": "./react-router/index.d.ts"
-		},
-		"./react-router/browser": {
-			"import": "./react-router/browser/index.js",
-			"types": "./react-router/browser/index.d.ts"
-		},
-		"./react-router/styles.css": {
-			"import": "./react-router/styles.css/index.js",
-			"types": "./react-router/styles.css/index.d.ts"
-		},
-		"./bun-mdx-kitajs-loader": {
-			"import": "./bun-mdx-kitajs-loader/index.js",
-			"types": "./bun-mdx-kitajs-loader/index.d.ts"
-		},
-		"./bun-postcss-loader": {
-			"import": "./bun-postcss-loader/index.js",
-			"types": "./bun-postcss-loader/index.d.ts"
-		},
-		"./file-system": {
-			"import": "./file-system/index.js",
-			"types": "./file-system/index.d.ts"
-		},
-		"./file-system/bun": {
-			"import": "./file-system/bun/index.js",
-			"types": "./file-system/bun/index.d.ts"
-		},
-		"./file-system/node": {
-			"import": "./file-system/node/index.js",
-			"types": "./file-system/node/index.d.ts"
-		},
-		"./browser-router": {
-			"import": "./browser-router/index.js",
-			"types": "./browser-router/index.d.ts"
-		},
-		"./browser-router/client": {
-			"import": "./browser-router/client/index.js",
-			"types": "./browser-router/client/index.d.ts"
-		},
-		"./browser-router/src/styles.css": {
-			"import": "./browser-router/src/styles.css/index.js",
-			"types": "./browser-router/src/styles.css/index.d.ts"
-		},
-		"./image-processor": {
-			"import": "./image-processor/index.js",
-			"types": "./image-processor/index.d.ts"
-		},
-		"./image-processor/types": {
-			"import": "./image-processor/types/index.js",
-			"types": "./image-processor/types/index.d.ts"
-		},
-		"./image-processor/component/html": {
-			"import": "./image-processor/component/html/index.js",
-			"types": "./image-processor/component/html/index.d.ts"
-		},
-		"./image-processor/component/react": {
-			"import": "./image-processor/component/react/index.js",
-			"types": "./image-processor/component/react/index.d.ts"
-		},
-		"./postcss-processor": {
-			"import": "./postcss-processor/index.js",
-			"types": "./postcss-processor/index.d.ts"
-		},
-		"./postcss-processor/postcss-processor": {
-			"import": "./postcss-processor/postcss-processor/index.js",
-			"types": "./postcss-processor/postcss-processor/index.d.ts"
-		},
-		"./postcss-processor/plugin": {
-			"import": "./postcss-processor/plugin/index.js",
-			"types": "./postcss-processor/plugin/index.d.ts"
-		},
-		"./postcss-processor/presets": {
-			"import": "./postcss-processor/presets/index.js",
-			"types": "./postcss-processor/presets/index.d.ts"
-		},
-		"./postcss-processor/presets/tailwind-v3": {
-			"import": "./postcss-processor/presets/tailwind-v3/index.js",
-			"types": "./postcss-processor/presets/tailwind-v3/index.d.ts"
-		},
-		"./postcss-processor/presets/tailwind-v4": {
-			"import": "./postcss-processor/presets/tailwind-v4/index.js",
-			"types": "./postcss-processor/presets/tailwind-v4/index.d.ts"
-		},
-		"./react": {
-			"import": "./react/index.js",
-			"types": "./react/index.d.ts"
-		},
-		"./react/react-esm": {
-			"import": "./react/react-esm/index.js",
-			"types": "./react/react-esm/index.d.ts"
-		},
-		"./react/react-dom-esm": {
-			"import": "./react/react-dom-esm/index.js",
-			"types": "./react/react-dom-esm/index.d.ts"
-		},
-		"./react/utils/dynamic": {
-			"import": "./react/utils/dynamic/index.js",
-			"types": "./react/utils/dynamic/index.d.ts"
-		},
-		"./react/utils/client-only": {
-			"import": "./react/utils/client-only/index.js",
-			"types": "./react/utils/client-only/index.d.ts"
-		},
-		"./react/router-adapter": {
-			"import": "./react/router-adapter/index.js",
-			"types": "./react/router-adapter/index.d.ts"
-		},
-		"./lit": {
-			"import": "./lit/index.js",
-			"types": "./lit/index.d.ts"
-		},
-		"./lit/styled-mixin": {
-			"import": "./lit/styled-mixin/index.js",
-			"types": "./lit/styled-mixin/index.d.ts"
-		},
-		"./kitajs": {
-			"import": "./kitajs/index.js",
-			"types": "./kitajs/index.d.ts"
-		},
-		"./mdx": {
-			"import": "./mdx/index.js",
-			"types": "./mdx/index.d.ts"
-		},
-		"./bun-inline-css-plugin": {
-			"import": "./bun-inline-css-plugin/index.js",
-			"types": "./bun-inline-css-plugin/index.d.ts"
-		},
-		"./core": {
-			"import": "./core/index.js",
-			"types": "./core/index.d.ts"
-		},
-		"./core/route-renderer/integration-renderer": {
-			"import": "./core/route-renderer/integration-renderer/index.js",
-			"types": "./core/route-renderer/integration-renderer/index.d.ts"
-		},
-		"./core/eco": {
-			"import": "./core/eco/index.js",
-			"types": "./core/eco/index.d.ts"
-		},
-		"./core/declarations": {
-			"import": "./core/declarations/index.js",
-			"types": "./core/declarations/index.d.ts"
-		},
-		"./core/env": {
-			"import": "./core/env/index.js",
-			"types": "./core/env/index.d.ts"
-		},
-		"./core/config-builder": {
-			"import": "./core/config-builder/index.js",
-			"types": "./core/config-builder/index.d.ts"
-		},
-		"./core/constants": {
-			"import": "./core/constants/index.js",
-			"types": "./core/constants/index.d.ts"
-		},
-		"./core/adapters/bun": {
-			"import": "./core/adapters/bun/index.js",
-			"types": "./core/adapters/bun/index.d.ts"
-		},
-		"./core/adapters/bun/create-app": {
-			"import": "./core/adapters/bun/create-app/index.js",
-			"types": "./core/adapters/bun/create-app/index.d.ts"
-		},
-		"./core/adapters/bun/define-api-handler": {
-			"import": "./core/adapters/bun/define-api-handler/index.js",
-			"types": "./core/adapters/bun/define-api-handler/index.d.ts"
-		},
-		"./core/hmr/hmr-strategy": {
-			"import": "./core/hmr/hmr-strategy/index.js",
-			"types": "./core/hmr/hmr-strategy/index.d.ts"
-		},
-		"./core/internal-types": {
-			"import": "./core/internal-types/index.js",
-			"types": "./core/internal-types/index.d.ts"
-		},
-		"./core/services/asset-processing-service": {
-			"import": "./core/services/asset-processing-service/index.js",
-			"types": "./core/services/asset-processing-service/index.d.ts"
-		},
-		"./core/utils/deep-merge": {
-			"import": "./core/utils/deep-merge/index.js",
-			"types": "./core/utils/deep-merge/index.d.ts"
-		},
-		"./core/utils/ecopages-url-resolver": {
-			"import": "./core/utils/ecopages-url-resolver/index.js",
-			"types": "./core/utils/ecopages-url-resolver/index.d.ts"
-		},
-		"./core/utils/invariant": {
-			"import": "./core/utils/invariant/index.js",
-			"types": "./core/utils/invariant/index.d.ts"
-		},
-		"./core/utils/parse-cli-args": {
-			"import": "./core/utils/parse-cli-args/index.js",
-			"types": "./core/utils/parse-cli-args/index.d.ts"
-		},
-		"./core/plugins/processor": {
-			"import": "./core/plugins/processor/index.js",
-			"types": "./core/plugins/processor/index.d.ts"
-		},
-		"./core/plugins/integration-plugin": {
-			"import": "./core/plugins/integration-plugin/index.js",
-			"types": "./core/plugins/integration-plugin/index.d.ts"
-		},
-		"./core/adapters/bun/client-bridge": {
-			"import": "./core/adapters/bun/client-bridge/index.js",
-			"types": "./core/adapters/bun/client-bridge/index.d.ts"
-		},
-		"./core/html": {
-			"import": "./core/html/index.js",
-			"types": "./core/html/index.d.ts"
-		},
-		"./core/css": {
-			"import": "./core/css/index.js",
-			"types": "./core/css/index.d.ts"
-		},
-		"./core/hash": {
-			"import": "./core/hash/index.js",
-			"types": "./core/hash/index.d.ts"
-		},
-		"./core/errors": {
-			"import": "./core/errors/index.js",
-			"types": "./core/errors/index.d.ts"
-		},
-		"./core/integrations/ghtml": {
-			"import": "./core/integrations/ghtml/index.js",
-			"types": "./core/integrations/ghtml/index.d.ts"
-		}
-	},
+	"files": [
+		"bin/",
+		"README.md"
+	],
 	"dependencies": {
 		"commander": "^12.1.0",
 		"tiged": "^2.12.7",
 		"@ecopages/logger": "^0.2.2"
 	},
-	"devDependencies": {
-		"@ecopages/react-router": "npm:@jsr/ecopages__react-router@0.1.92",
-		"@ecopages/bun-mdx-kitajs-loader": "npm:@jsr/ecopages__bun-mdx-kitajs-loader@0.1.92",
-		"@ecopages/bun-postcss-loader": "npm:@jsr/ecopages__bun-postcss-loader@0.1.92",
-		"@ecopages/file-system": "npm:@jsr/ecopages__file-system@0.1.92",
-		"@ecopages/browser-router": "npm:@jsr/ecopages__browser-router@0.1.92",
-		"@ecopages/image-processor": "npm:@jsr/ecopages__image-processor@0.1.92",
-		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@0.1.92",
-		"@ecopages/react": "npm:@jsr/ecopages__react@0.1.92",
-		"@ecopages/lit": "npm:@jsr/ecopages__lit@0.1.92",
-		"@ecopages/kitajs": "npm:@jsr/ecopages__kitajs@0.1.92",
-		"@ecopages/mdx": "npm:@jsr/ecopages__mdx@0.1.92",
-		"@ecopages/bun-inline-css-plugin": "npm:@jsr/ecopages__bun-inline-css-plugin@0.1.92",
-		"@ecopages/core": "npm:@jsr/ecopages__core@0.1.92"
-	},
 	"peerDependencies": {
 		"bun-types": "latest",
 		"typescript": "^5"
-	},
-	"files": [
-		"index.js",
-		"index.d.ts",
-		"bin/",
-		"README.md",
-		"react-router/",
-		"bun-mdx-kitajs-loader/",
-		"bun-postcss-loader/",
-		"file-system/",
-		"browser-router/",
-		"image-processor/",
-		"postcss-processor/",
-		"react/",
-		"lit/",
-		"kitajs/",
-		"mdx/",
-		"bun-inline-css-plugin/",
-		"core/"
-	]
+	}
 }
