--- a/examples/starter-ghtml/package.json
+++ b/examples/starter-ghtml/package.json
@@ -3,13 +3,14 @@
 	"description": "Starter template for Ecopages projects, minimal setup",
 	"private": true,
 	"scripts": {
-		"start": "bun run app.ts",
-		"dev": "bun run app.ts --dev",
-		"build": "bun run app.ts --build",
-		"preview": "bun run app.ts --preview",
-		"watch:dev": "bun --watch run app.ts --dev"
+		"start": "ecopages start",
+		"dev": "ecopages dev",
+		"build": "ecopages build",
+		"preview": "ecopages preview",
+		"watch:dev": "ecopages watch:dev"
 	},
 	"devDependencies": {
+		"ecopages": "latest",
 		"@ecopages/core": "npm:@jsr/ecopages__core@latest",
 		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@latest",
 		"@ecopages/radiant": "latest",
