--- a/examples/starter-jsx/package.json
+++ b/examples/starter-jsx/package.json
@@ -9,7 +9,14 @@
 		"watch:dev": "ecopages watch:dev"
 	},
 	"devDependencies": {
-		"ecopages": "^0.1.90",
+		"ecopages": "latest",
+		"@ecopages/core": "npm:@jsr/ecopages__core@latest",
+		"@ecopages/kitajs": "npm:@jsr/ecopages__kitajs@latest",
+		"@ecopages/lit": "npm:@jsr/ecopages__lit@latest",
+		"@ecopages/mdx": "npm:@jsr/ecopages__mdx@latest",
+		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@latest",
+		"@ecopages/radiant": "latest",
+		"@ecopages/scripts-injector": "latest",
 		"@tailwindcss/postcss": "^4.0.0",
 		"tailwindcss": "^4.0.0"
 	}
