--- a/examples/starter-lit-jsx/package.json
+++ b/examples/starter-lit-jsx/package.json
@@ -2,13 +2,14 @@
 	"name": "@ecopages/starter-lit-jsx",
 	"private": true,
 	"scripts": {
-		"start": "bun run app.ts",
-		"dev": "bun run app.ts --dev",
-		"build": "bun run app.ts --build",
-		"preview": "bun run app.ts --preview",
-		"watch:dev": "bun --watch run app.ts --dev"
+		"start": "ecopages start",
+		"dev": "ecopages dev",
+		"build": "ecopages build",
+		"preview": "ecopages preview",
+		"watch:dev": "ecopages watch:dev"
 	},
 	"devDependencies": {
+		"ecopages": "latest",
 		"@ecopages/core": "npm:@jsr/ecopages__core@latest",
 		"@ecopages/kitajs": "npm:@jsr/ecopages__kitajs@latest",
 		"@ecopages/lit": "npm:@jsr/ecopages__lit@latest",
