--- a/examples/starter-react/package.json
+++ b/examples/starter-react/package.json
@@ -2,13 +2,14 @@
 	"name": "@ecopages/starter-react",
 	"private": true,
 	"scripts": {
-		"start": "NODE_ENV=production bun run app.ts",
-		"dev": "bun run app.ts --dev",
-		"build": "NODE_ENV=production bun run app.ts --build",
-		"preview": "NODE_ENV=production bun run app.ts --preview",
-		"watch:dev": "bun --watch run app.ts --dev"
+		"start": "ecopages start",
+		"dev": "ecopages dev -r",
+		"build": "ecopages build",
+		"preview": "ecopages preview",
+		"watch:dev": "ecopages watch:dev -r"
 	},
 	"devDependencies": {
+		"ecopages": "latest",
 		"@ecopages/core": "npm:@jsr/ecopages__core@latest",
 		"@ecopages/postcss-processor": "npm:@jsr/ecopages__postcss-processor@latest",
 		"@ecopages/react-router": "npm:@jsr/ecopages__react-router@latest",
