--- a/packages/integrations/kitajs/package.json
+++ b/packages/integrations/kitajs/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/kitajs",
-	"version": "0.1.93",
+	"version": "0.1.94",
 	"description": "Kitajs plugin for Ecopages",
 	"keywords": [
 		"ecopages",
@@ -23,9 +23,11 @@
 		"typecheck": "tsc --noEmit",
 		"release:jsr": "bunx jsr publish"
 	},
+	"peerDependencies": {
+		"@ecopages/core": "workspace:*"
+	},
 	"dependencies": {
 		"@kitajs/html": "^4.1.0",
-		"@kitajs/ts-html-plugin": "^4.0.1",
-		"@ecopages/core": "workspace:*"
+		"@kitajs/ts-html-plugin": "^4.0.1"
 	}
 }
