feat(starter-jsx): cleanup starter jsx

--- a/package.json
+++ b/package.json
@@ -90,7 +90,8 @@
 		"packages/processors/*",
 		"playground/*",
 		"e2e/fixtures/*",
-		"apps/*"
+		"apps/*",
+		"examples/*"
 	],
 	"type": "module"
 }
