feat(examples): Added example with better-auth and drizzle + initial skills md

--- a/package.json
+++ b/package.json
@@ -90,8 +90,7 @@
 		"packages/processors/*",
 		"playground/*",
 		"e2e/fixtures/*",
-		"apps/*",
-		"examples/*"
+		"apps/*"
 	],
 	"type": "module"
 }
