chore(#131): update tests and config for EcoInjectedMeta refactor
Update test files to use new __eco metadata structure (id + file instead of dir),
fix typecheck script to use bunx, and include loader plugins in HMR manager setup.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,7 +20,7 @@
 		"directory": "packages/core"
 	},
 	"scripts": {
-		"typecheck": "tsc --noEmit",
+		"typecheck": "bunx tsc --noEmit",
 		"release:jsr": "bunx jsr publish"
 	},
 	"dependencies": {
