--- a/examples/with-react-better-auth/tsconfig.json
+++ b/examples/with-react-better-auth/tsconfig.json
@@ -13,6 +13,6 @@
 			"@/*": ["./src/*"]
 		}
 	},
-	"include": ["**/*.ts", "**/*.tsx"],
+	"include": ["**/*.ts", "**/*.tsx", "**/*.d.ts"],
 	"exclude": ["node_modules", ".eco"]
 }
