feat: add styles.css export to browser-router and react-router

--- a/packages/browser-router/package.json
+++ b/packages/browser-router/package.json
@@ -15,10 +15,7 @@
 	"exports": {
 		".": "./src/index.ts",
 		"./client": "./src/client/eco-router.ts",
-		"./src/styles.css": {
-			"import": "./src/styles.css",
-			"require": "./src/styles.css"
-		}
+		"./src/styles.css": "./src/styles.css"
 	},
 	"files": [
 		"src"
