feat: update styles.css export and include in publish for browser-router and react-router

--- a/packages/browser-router/package.json
+++ b/packages/browser-router/package.json
@@ -15,7 +15,7 @@
 	"exports": {
 		".": "./src/index.ts",
 		"./client": "./src/client/eco-router.ts",
-		"./src/styles.css": "./src/styles.css"
+		"./styles.css": "./src/styles.css"
 	},
 	"files": [
 		"src"
