fix: update styles.css export format in package.json for browser and react routers

--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -15,7 +15,10 @@
 	"exports": {
 		".": "./src/index.ts",
 		"./browser": "./browser.ts",
-		"./styles.css": "./src/styles.css"
+		"./styles.css": {
+			"style": "./src/styles.css",
+			"default": "./src/styles.css"
+		}
 	},
 	"files": [
 		"src",
