fix: update CSS imports to use ecopages package for view transitions and remove deprecated styles

--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -14,11 +14,7 @@
 	"type": "module",
 	"exports": {
 		".": "./src/index.ts",
-		"./browser": "./browser.ts",
-		"./styles.css": {
-			"style": "./src/styles.css",
-			"default": "./src/styles.css"
-		}
+		"./browser": "./browser.ts"
 	},
 	"files": [
 		"src",
