--- a/packages/browser-router/package.json
+++ b/packages/browser-router/package.json
@@ -14,11 +14,7 @@
 	"type": "module",
 	"exports": {
 		".": "./src/index.ts",
-		"./client": "./src/client/eco-router.ts",
-		"./styles.css": {
-			"style": "./src/styles.css",
-			"default": "./src/styles.css"
-		}
+		"./client": "./src/client/eco-router.ts"
 	},
 	"files": [
 		"src"
